<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment"
    android:padding="40dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTv"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/etHeight"
        android:layout_marginTop="@dimen/etMargin"
        android:background="@drawable/input_text_box"
        android:hint="@string/loginUsername"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/etHeight"
        android:layout_marginTop="@dimen/etMargin"
        android:background="@drawable/input_text_box"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:autofillHints="" />

    <android.widget.Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="@dimen/btPadding"
        android:text="@string/loginTv"
        android:textColor="@color/white"
        android:background="@drawable/login_button"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tvLoginOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/red" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl_snack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>